firefox parallax spacing fix

--- a/src/theme/scss/components/_parallax-component.scss
+++ b/src/theme/scss/components/_parallax-component.scss
@@ -17,6 +17,9 @@
     padding-top: 0px;
   }
 
+  &--spacing {
+    margin-bottom: 170px;
+  }
 
   &--child-scroll {
     height: fit-content;
